--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,8 +12,8 @@
 
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="password" type="password">
-                        <label for="password">Password</label>
+                        <input id="pass-word" type="password">
+                        <label for="pass-word">Password</label>
                     </div>
                 </div>
                 <button class="btn waves-effect" id="loginbtn">
