--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,29 +1,46 @@
 <div class="container">
     <div class="row">
         <div class="col s10 offset-s1" id="panel">
+            <div class="progress" *ngIf="showSpinner">
+                <div class="indeterminate"></div>
+            </div>
             <h3 id="title">Lets Gossip</h3>
-            <form class="col s12">
+            <div class="red lighten-2" *ngIf="errorMessage" id="errorMsg">
+                <span>
+                    {{errorMessage}}
+                </span>
+            </div>
+            <form class="col s12" [formGroup]="signupForm" novalidate (ngSubmit)="signupUser()">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="user_name" type="text">
+                        <input id="user_name" type="text" formControlName="username">
                         <label for="user_name">Username</label>
+                        <span class="error" *ngIf="!signupForm.controls['username'].valid && signupForm.controls['username'].touched">
+                            Username is required  
+                        </span>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="email" type="email" >
+                        <input id="email" type="email" formControlName="email">
                         <label for="email">Email</label>
+                        <span class="error" *ngIf="!signupForm.controls['email'].valid && signupForm.controls['email'].touched">
+                            Email is required  
+                        </span>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="password" type="password">
+                        <input id="password" type="password" formControlName="password">
                         <label for="password">Password</label>
+                        <span class="error" *ngIf="!signupForm.controls['password'].valid && signupForm.controls['password'].touched">
+                            Password is required  
+                        </span>
                     </div>
                 </div>
-                <button class="btn waves-effect" id="signupbtn">
+                <button class="btn waves-effect" id="signupbtn" [disabled]="!signupForm.valid">
                     Sign Up
                 </button>
 
