--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -38,3 +38,17 @@ form .row{
 .indeterminate {
     background-color: #3f51b5 !important;;
 }
+
+#errorMsg {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+}
+
+#errorMsg span {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    position: relative;
+    float: left ;
+}
